@@ -1,3 +1,8 @@
+2008-02-05  Sven Herzberg  <sven@imendio.com>
+
+	* src/ui/ui-main.c: (ui_main_new): added a GtkUIManager to make the
+	menu-creation for Maemo a _lot_ easier
+
 2008-02-06  Sven Herzberg  <sven@imendio.com>
 
 	Use LINGUAS according to http://live.gnome.org/GnomeGoals/PoLinguas
